--- a/cart.html
+++ b/cart.html
@@ -372,15 +372,21 @@
                   <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
                   <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
                 </div>
-                <div class="carousel-inner">
+                <div class="carousel-inner  w-100">
                   <div class="carousel-item active">
-                    <img src="..." class="d-block w-100" alt="...">
+                    <div class="w-100 d-flex align-items-center justify-content-center">
+                    <img src="./e-asset/productadd1" class="d-block productpimg" alt="...">
+                    </div>
                   </div>
                   <div class="carousel-item">
-                    <img src="..." class="d-block w-100" alt="...">
+                    <div class="w-100 d-flex align-items-center justify-content-center">
+                    <img src="./e-asset/productadd2.webp" class="d-block productpimg" alt="...">
+                </div>
                   </div>
                   <div class="carousel-item">
-                    <img src="..." class="d-block w-100" alt="...">
+                    <div class="w-100 d-flex align-items-center justify-content-center">
+                        <img src="./e-asset/product3.webp" class="d-block productpimg" alt="...">
+                    </div>
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
